# amethyst

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/shaders/: lithium.v.pica  shader2d.v.pica
example/source/: main.cpp  main.cpp.2  main.cpp.3  main.cpp44
include/: amethyst.hpp
include/amethyst/: app.hpp  asset.hpp  assets.hpp  c3d.hpp  color.hpp  ctru.hpp  godtrace.hpp  id.hpp  image.hpp  iron.hpp  linearAlloc.hpp  pool.hpp  rect.hpp  renderer.hpp  texture.hpp  types.hpp  utils.hpp
include/amethyst/maths/: mat.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
poc/: CMakeLists.txt  README.md
poc/c3d_permutation/: CMakeLists.txt  README.md
poc/c3d_permutation/source/: main.cpp
source/: amethyst.cpp  app.cpp  assets.cpp  c3d.cpp  color.cpp  ctru.cpp  godtrace.cpp  image.cpp  iron.cpp  renderer.cpp  texture.cpp  utils.cpp
source/iron/: drawlist.cpp  font.cpp  iron.cpp
source/maths/: mat.cpp
tests/: CMakeLists.txt  u8_iterator.cpp
